--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     cursor: move;
     pointer-events: auto;
 
-    background-color: #303030; /*#0f0f0f*/
+    background-color: black; /*#303030*/
     background-size: min(4vw, 4vh) min(4vw, 4vh);
     background-position: center;
     
@@ -112,35 +112,35 @@ header {
     padding: 0;
     line-height: 0.9;
     display: flex;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(min(0.5vw, 0.5vh));
 }
 .year-blur{
-    font-size: min(10vw, 10vh);
+    font-size: min(8vw, 8vh);
     font-weight: bold;
     color: #999999;
-    filter: blur(0.5px);
+    filter: blur(min(0.05vw, 0.05vh));
 }
 .year {
-    font-size: min(10vw, 10vh);
+    font-size: min(8vw, 8vh);
     font-weight: bold;
     color: #e6e6e6;
 }
 .date-location {
     display:flex;
     flex-direction: column;
-    margin-left: min(2vw, 2vh);
+    margin-left: min(1.6vw, 1.6vh);
 }
 .month {
-    font-size: min(5vw, 5vh);
+    font-size: min(4vw, 4vh);
     font-weight: bold;
     color: #e6e6e6;
-    margin-top: min(0.5vw, 0.5vh);    
+    margin-top: min(0.4vw, 0.4vh);    
 }
 .location {
-    font-size: min(3vw, 3vh);
+    font-size: min(2.4vw, 2.4vh);
     font-weight: bold;
     color: #4d4d4d;
-    margin-top: min(0.75vw, 0.75vh);
+    margin-top: min(0.6vw, 0.6vh);
     
 }
 
@@ -158,7 +158,7 @@ nav{
     pointer-events: auto;
     margin: 0;
     padding: 0;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(min(0.5vw, 0.5vh));
 
 }
 
@@ -180,7 +180,7 @@ nav{
     font-family: Helvetica, sans-serif;
     cursor: pointer;
     
-    filter: blur(1px);
+    filter: blur(min(0.15vw, 0.15vh));
     
     padding-left: min(1.15vw, 1.15vh);
     padding-right: min(1.5vw, 1.5vh);
@@ -214,16 +214,18 @@ nav{
     border-width: 0vh 0vw 0vh 0vw;
     border-style: solid;
     border-color: rgba(15, 15, 15, 1);
-    background: radial-gradient(rgba(26, 26, 26, 0) 0%, rgba(26, 26, 26, 0.95) 70%);
+    background: linear-gradient(to right, rgba(226, 26, 26, 0) 0%, rgba(26, 26, 26, 0) 70%, rgba(26, 26, 26, 1) 100%), linear-gradient(to left, rgba(26, 26, 26, 0) 0%, rgba(26, 26, 26, 0) 70%, rgba(26, 26, 26, 1) 100%), linear-gradient(to top, rgba(26, 26, 26, 0) 0%, rgba(26, 26, 26, 0) 70%, rgba(26, 26, 26, 1) 100%), linear-gradient(to bottom, rgba(26, 26, 26, 0) 0%, rgba(26, 26, 26, 0) 70%, rgba(26, 26, 26, 1) 100%);
     pointer-events: none;
     z-index: 2;
     animation: zoomGrid 2s forwards 2.5s;
 }
 
 
+
 /* Background */
 .background {
     position: relative;
+    display: 
     z-index: 1; 
     top: -500vh;
     left: -150vw;
@@ -259,21 +261,24 @@ nav{
     top: 0;
     left: 0;
     pointer-events: auto;
-    background-image: radial-gradient(circle 500px at 50% 200px, #3e3e3e, transparent);
+    background-image: radial-gradient(circle min(50vw, 50vh) at 50% 50vh, #3e3e3e, transparent);
     z-index: -1;
 }
 
 .card {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     width: min(20vw, 20vh);
     height: auto;
     background-color: rgba(230, 230, 230, 0.9);
     
+    
     border-color: black;
     border-style: solid;
     border-width: min(0.2vw, 0.2vh);
+    
+    
     
     border-radius: min(1vw, 1vh);
     pointer-events: auto;
@@ -285,10 +290,6 @@ nav{
     
     
     text-align: start;
-    color: black;
-    font-weight: bold;
-    font-size: min(1.5vw, 1.5vh);
-    line-height: 1.5;
 }
 
 .card:hover {   
@@ -298,9 +299,7 @@ nav{
 .card img{
     border-radius: min(1vw, 1vh);
     
-    border-color: black;
-    border-style: solid;
-    border-width: min(0.2vw, 0.2vh);
+    box-shadow: 0 0 0 min(0.1vw, 0.1vh) black;
     
     width: 100%;
     align-self: flex-start;
@@ -308,8 +307,30 @@ nav{
     
     bottom: min(2vw, 2vh);
 }
+.card-container{
+    display: flex;
+}
+
+.card-title {
+    margin-left: min(0.75vw, 0.75vh);
+    margin-top: min(0.25vw, 0.25vh);
+    color: black;
+    font-weight: bold;
+    font-size: min(1.5vw, 1.5vh);
+    line-height: 1;
+    overflow: hidden;
+}
 .card-text {
     margin-left: min(0.75vw, 0.75vh);
+    margin-right: 0;
+    margin-bottom: min(0.25vw, 0.25vh);
+    margin-top: 0; 
+    padding: 0;
+    color: black;
+    font-weight: normal;
+    font-size: min(1.5vw, 1.5vh);
+    line-height: 1;
+    overflow: hidden;
 }
 
 
